# libomemo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  libomemo.pc.cmake  makefile
.github/workflows/: linux.yml  windows.yml
src/: libomemo.c  libomemo.h  libomemo_crypto.c  libomemo_crypto.h  libomemo_storage.c  libomemo_storage.h
test/: test_crypto.c  test_libomemo.c  test_storage.c
